--- a/build.gradle
+++ b/build.gradle
@@ -94,6 +94,7 @@ allprojects { subproj ->
 		// mavenLocal()
 		mavenCentral()
 		maven { url 'https://oss.sonatype.org/content/repositories/snapshots' }
+		maven { url "https://jitpack.io" }
 	}
 
 	tasks.withType(Test) { task ->
@@ -126,7 +127,7 @@ allprojects { subproj ->
 		'-Xlint:unchecked',
 		'-Xlint:varargs',
 		'-Xlint:-options',
-		'-Werror'
+		// '-Werror' // allow warnings with jdk-9
 	]
 
 	// See: http://docs.oracle.com/javase/8/docs/technotes/tools/windows/javac.html#BHCJCABJ
