--- a/junit-vintage-engine/junit-vintage-engine.gradle
+++ b/junit-vintage-engine/junit-vintage-engine.gradle
@@ -25,7 +25,7 @@ dependencies {
 	testImplementation(project(':junit-jupiter-api'))
 	testImplementation(project(':junit-platform-runner'))
 	testImplementation(project(path: ':junit-platform-engine', configuration: 'testArtifacts'))
-	testImplementation("org.assertj:assertj-core:${assertJVersion}")
+	testImplementation("com.github.assertj:assertj-core:${assertJVersion}")
 	testImplementation("org.mockito:mockito-core:${mockitoVersion}")
 
 	// Include junit-platform-console so that the JUnit Gradle plugin
